<resources>
    <string name="app_name">/r/Android App Store</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_filter">Filter</string>
    <string name="button_search">Search</string>
    <string name="screen_details">Details</string>
    <string name="button_contact">Contact developer</string>
    <string name="button_download">Download</string>
    <string name="gplay">Google Play</string>
    <string name="fdroid">F-Droid</string>
    <string name="website">Website</string>
    <string name="mail">E-Mail</string>
    <string name="reddit">Reddit</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="hint_type_to_filter">Type to filter</string>
    <string name="button_about">About</string>
    <string name="text_contributors">Contributors</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version</string>
    <string name="bugreport">Report bug</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="appearance">Appearance</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_theme_desc">Theme to use</string>
    <string name="restart">A restart is required to toggle themes</string>
    <string name="later">Later</string>
    <string name="app_category_everything">All</string>
    <string name="app_category_new">New</string>
    <string name="view_update">View</string>
    <string name="error">Error fetching repository</string>
    <string name="options">Options</string>
    <string name="screenshots">Screenshots</string>
    <string name="options_loadmedia_title"><![CDATA[Icons & screenshots]]></string>
    <string name="options_loadmedia_summary">Load app icons and screenshots</string>
    <string name="options_savetagfilters_title">Save selected Tag filters</string>
    <string name="options_savetagfilters_summary">Filter by the same selected Tags every time</string>
    <string name="update">Update available</string>
    <string name="update_error">Error checking for updates</string>
    <string name="update_confirm">Update</string>
    <string name="cancel">Cancel</string>
    <string name="flag">Flag app</string>
    <string name="no_message">Please enter a message</string>
    <string name="no_email_client">No email client available</string>
    <string name="flag_text">Please describe why you are flagging this app. You will be redirected to Reddit to send a PM to the r/Android mod team</string>
    <string name="error_contributors">There was a problem fetching contributors.</string>
    <string name="build_from_fdroid">Note: If you downloaded this app from F-Droid, the download link will require a reinstall.</string>
    <plurals name="x_items">
        <item quantity="one">%s item</item>
        <item quantity="other">%s items</item>
    </plurals>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>AMOLED</item>
    </string-array>
    <string-array name="themesValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="no_download_client">No client available for this download</string>
    <string name="submitapp">Submit an app</string>
</resources>
