<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory android:title="@string/appearance">
        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/themes"
            android:entryValues="@array/themesValues"
            android:key="theme"
            android:summary="@string/preference_theme_desc"
            android:title="@string/preference_theme" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory android:title="@string/options">
        <android.support.v7.preference.CheckBoxPreference
            android:checked="true"
            android:defaultValue="true"
            android:key="core.options.loadmedia"
            android:summary="@string/options_loadmedia_summary"
            android:title="@string/options_loadmedia_title" />
        <android.support.v7.preference.CheckBoxPreference
            android:checked="false"
            android:defaultValue="false"
            android:key="core.options.savetagfilters"
            android:summary="@string/options_savetagfilters_summary"
            android:title="@string/options_savetagfilters_title" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory android:title="@string/more">
        <android.support.v7.preference.Preference
            android:key="about"
            android:title="@string/button_about" />
        <android.support.v7.preference.Preference
            android:key="submitapp"
            android:title="@string/submitapp" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>